@@ -591,24 +591,24 @@ static const char *set_cookie_name2(cmd_parms * cmd, void *config, const char *a
 static const command_rec session_dbd_cmds[] =
 {
     AP_INIT_TAKE1("SessionDBDSelectLabel", ap_set_string_slot,
-      (void *) APR_OFFSETOF(session_dbd_dir_conf, selectlabel), OR_AUTHCFG,
+      (void *) APR_OFFSETOF(session_dbd_dir_conf, selectlabel), RSRC_CONF|OR_AUTHCFG,
                   "Query label used to select a new session"),
     AP_INIT_TAKE1("SessionDBDInsertLabel", ap_set_string_slot,
-      (void *) APR_OFFSETOF(session_dbd_dir_conf, insertlabel), OR_AUTHCFG,
+      (void *) APR_OFFSETOF(session_dbd_dir_conf, insertlabel), RSRC_CONF|OR_AUTHCFG,
                   "Query label used to insert a new session"),
     AP_INIT_TAKE1("SessionDBDUpdateLabel", ap_set_string_slot,
-      (void *) APR_OFFSETOF(session_dbd_dir_conf, updatelabel), OR_AUTHCFG,
+      (void *) APR_OFFSETOF(session_dbd_dir_conf, updatelabel), RSRC_CONF|OR_AUTHCFG,
                   "Query label used to update an existing session"),
     AP_INIT_TAKE1("SessionDBDDeleteLabel", ap_set_string_slot,
-      (void *) APR_OFFSETOF(session_dbd_dir_conf, deletelabel), OR_AUTHCFG,
+      (void *) APR_OFFSETOF(session_dbd_dir_conf, deletelabel), RSRC_CONF|OR_AUTHCFG,
                   "Query label used to delete an existing session"),
-    AP_INIT_FLAG("SessionDBDPerUser", set_dbd_peruser, NULL, OR_AUTHCFG,
+    AP_INIT_FLAG("SessionDBDPerUser", set_dbd_peruser, NULL, RSRC_CONF|OR_AUTHCFG,
                  "Save the session per user"),
     AP_INIT_FLAG("SessionDBDCookieRemove", set_dbd_cookie_remove, NULL, RSRC_CONF|OR_AUTHCFG,
                  "Remove the session cookie after session load. On by default."),
-    AP_INIT_RAW_ARGS("SessionDBDCookieName", set_cookie_name, NULL, OR_AUTHCFG,
+    AP_INIT_RAW_ARGS("SessionDBDCookieName", set_cookie_name, NULL, RSRC_CONF|OR_AUTHCFG,
                  "The name of the RFC2109 cookie carrying the session key"),
-    AP_INIT_RAW_ARGS("SessionDBDCookieName2", set_cookie_name2, NULL, OR_AUTHCFG,
+    AP_INIT_RAW_ARGS("SessionDBDCookieName2", set_cookie_name2, NULL, RSRC_CONF|OR_AUTHCFG,
                  "The name of the RFC2965 cookie carrying the session key"),
     {NULL}
 };
